testdata/invalid/constant_invalid_01.lisp
;;error:2:11-12:invalid constant name
(defconst 2 2)
